--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-plugin-aws-alerts",
-  "version": "1.7.6",
+  "version": "1.7.7",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -36,7 +36,7 @@
     "jest": "^19.0.2"
   },
   "peerDependencies": {
-    "serverless": "^2.4.0"
+    "serverless": "^2.4.0 || 3"
   },
   "engines": {
     "node": ">=8.10.0"
